# game-of-life

./: CMakeLists.txt  GridProcessor.cpp  GridProcessor.h  README.md  SimulationManager.cpp  SimulationManager.h  main.cpp
display/: SimulationWindow.cpp  SimulationWindow.h
qt_ui/: ConfiguratorWindow.cpp  ConfiguratorWindow.h
util/: Configuration.h  ConwayCell.cpp  ConwayCell.h  Grid.cpp  Grid.h
